Feature: add servers group publications (somes server can be dedicated to some users group)
Conflicts:
	AdminConsole/classes/Preferences_admin.class.php

--- a/AdminConsole/web/Makefile.am
+++ b/AdminConsole/web/Makefile.am
@@ -48,6 +48,7 @@ scripts_DATA = actions.php \
                reporting.php \
                script.php \
                servers.php \
+               serversgroup.php \
                sharedfolders.php \
                session-reporting.php \
                sessions.php \
