--- a/SessionManager/web/classes/Makefile.am
+++ b/SessionManager/web/classes/Makefile.am
@@ -25,6 +25,7 @@ scripts_DATA = AdminAction.class.php \
                ReportItems.class.php \
                Script.class.php \
                Server.class.php \
+               ServersGroup.class.php \
                Server_Logs.class.php \
                ServerReportItem.class.php \
                Session.class.php \
