--- a/SessionManager/config/apache2.conf.in
+++ b/SessionManager/config/apache2.conf.in
@@ -8,4 +8,14 @@ Alias /ovd/client @DATADIR@/ulteo/sessionmanager/client
     allow from all
     DirectoryIndex index.php
     php_admin_flag magic_quotes_gpc Off
+
+    RewriteEngine On
+    RewriteBase /ovd/client/
+
+    # Add .php at the end of the request if not exists
+    RewriteCond %{REQUEST_URI}  !^.+\.php$
+    RewriteRule (.*) $1.php [L]
+
+    # Replace all sub "/" by _ in the request URI
+    RewriteRule (.*)/(.*) $1_$2
 </Directory>
