Bugfix: samba Share mode is deprecated

--- a/OvdServer/examples/samba.conf
+++ b/OvdServer/examples/samba.conf
@@ -10,7 +10,7 @@
 	dns proxy = No
 	wins support = No
 
-	security = share
+	security = user
 	passdb backend = smbpasswd
 
 	encrypt passwords = Yes
