Backport from git branch i18n/3.0/cs: Add Czech translatons and support   * d8b6f222: Add Czech translatons and support   * cc986316: Wrong flag   * 734188ab: Add Czech translatons and support for Session Manager part   * 49a80ae5: Correct the cs po files according to the template   * ebe22733: Forgot autotools
git-svn-id: file:///home/code/svn/ovd/branches/3.0@8697 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -50,6 +50,7 @@ scripts_DATA = ad.png \
                co.png \
                cr.png \
                cs.png \
+               cs-cz.png \
                cu.png \
                cv.png \
                cx.png \
