Backport from git branch i18n/3.0/ca-es: Add Catalan translatons and support   * c4386459: Add Catalan language support and translations for both SM and client   * 333ee39f: Fix missing pattern subsistution in ca sm strings
git-svn-id: file:///home/code/svn/ovd/branches/3.0@8698 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -37,6 +37,7 @@ scripts_DATA = ad.png \
                by.png \
                bz.png \
                ca.png \
+               ca-es.png \
                cc.png \
                cd.png \
                cf.png \
