Backport from git branch i18n/3.0/ko: Add Korean support and translation for client part
git-svn-id: file:///home/code/svn/ovd/branches/3.0@8700 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -135,6 +135,7 @@ scripts_DATA = ad.png \
                km.png \
                kn.png \
                ko.png \
+               ko-kr.png \
                kp.png \
                kw.png \
                ky.png \
