--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -77,6 +77,10 @@ level = error warn info debug
 # keep enabled the keep alive HTTP feature if used, disabled instead
 # default value is 'true'
 
+# disable_sslv2 = true|false
+# the ssl server accept ssl v2 & v3 protocols by default. if this option is set to true, it will only accept sslv3
+# default value is 'false'
+
 
 [FileServer]
 # user = 
