Bugfix: java segfault when it start external apps client

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -24,11 +24,14 @@ outputFilename = ""
 [rules]
 configuration = "%{CSIDL_APPDATA}\Microsoft\Windows\Libraries.*"
 volatile = "${TEMP}\.*"
+volatile = "${USERPROFILE}"
 volatile = "%{CSIDL_APPDATA}\ulteo\.*"
 volatile = "${USERPROFILE}\WINDOWS\.*"
 volatile = "%{CSIDL_PROGRAMS}.*"
 volatile = "%{CSIDL_INTERNET_CACHE}.*"
 configuration = "%{CSIDL_TEMPLATES}.*"
+volatile = "%{CSIDL_DESKTOP}\.*lnk"
+volatile = "%{CSIDL_DESKTOP}\.*ini"
 configuration = "%{CSIDL_APPDATA}.*"
 configuration = "%{CSIDL_LOCAL_APPDATA}.*"
 configuration = "%{CSIDL_FAVORITES}.*"
