Improvement: text log is more useable. For each process, a log is created

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -15,8 +15,8 @@ CSIDL_TEMPLATES = "%{CSIDL_TEMPLATES}"
 [log]
 level = INFO
 enableDevelOutput = false
-enableStdOutput = true
-outputFilename = ""
+enableStdOutput = false
+#outputFilename = "%{CSIDL_APPDATA}\${USERNAME}\test"
 
 # Rules list
 # list of path redirection 
