Major usergroupDB ldap code cleaning: merge ldap_posix and ldap_memberof into only one usergroup db ldap

--- a/SessionManager/web/classes/abstract/liaison/Makefile.am
+++ b/SessionManager/web/classes/abstract/liaison/Makefile.am
@@ -1,9 +1,7 @@
 scripts_DATA = Abstract_Liaison.class.php \
                Abstract_Liaison_dynamic.class.php \
-               Abstract_Liaison_ldap_memberof.class.php \
-               Abstract_Liaison_ldap_posix.class.php \
-			   Abstract_Liaison_sql.class.php \
-			   Abstract_Liaison_activedirectory.class.php
+               Abstract_Liaison_ldap.class.php \
+			   Abstract_Liaison_sql.class.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/classes/abstract/liaison
 
