Feature: Session Manager now log each action performed  on the API. Administration Console show this log so  it's now possible to know what changes has been done on  the configuration (when, who, what)

--- a/AdminConsole/web/Makefile.am
+++ b/AdminConsole/web/Makefile.am
@@ -23,6 +23,7 @@
 SUBDIRS = ajax media includes classes
 
 scripts_DATA = actions.php \
+               action-reporting.php \
                applications.php \
                applications_static.php \
                applications_webapp.php \
