Remove useless sql_external & unix userDB and usergroupDB modules   * sql_external is not require anymore since SM provide a admin API   * unix never worked entirely

--- a/SessionManager/web/modules/UserGroupDB/Makefile.am
+++ b/SessionManager/web/modules/UserGroupDB/Makefile.am
@@ -1,7 +1,6 @@
 scripts_DATA = activedirectory.php \
                ldap.php \
-			   sql.php \
-			   sql_external.php
+			   sql.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/modules/UserGroupDB
 
