--- a/SessionManager/web/modules/UserDB/Makefile.am
+++ b/SessionManager/web/modules/UserDB/Makefile.am
@@ -1,3 +1,3 @@
-scripts_DATA = ldap.php sql.php unix.php activedirectory.php sql_external.php
+scripts_DATA = ldap.php sql.php activedirectory.php
 scriptsdir = $(datadir)/ulteo/sessionmanager/modules/UserDB
 EXTRA_DIST = $(scripts_DATA)
