--- a/client/web/web/media/style/Makefile.am
+++ b/client/web/web/media/style/Makefile.am
@@ -1,4 +1,4 @@
-scripts_DATA = common.css images.css webclient.css
+scripts_DATA = common.css images.css webclient.css responsive.css desktop.css dialogs.css login.css notifications.css portal.css rtl.css
 
 scriptsdir = $(datadir)/ulteo/webclient/media/style
 
