Remove useless Liaison related to users group modules since everything is now managed directly inside the modules itself

--- a/SessionManager/web/classes/abstract/Makefile.am
+++ b/SessionManager/web/classes/abstract/Makefile.am
@@ -1,6 +1,5 @@
-SUBDIRS = liaison
-
 scripts_DATA = Abstract_AdminAction.class.php\
+               Abstract_Liaison.class.php \
                Abstract_News.class.php \
                Abstract_ReportServer.class.php \
                Abstract_ReportSession.class.php \
