Add missing Permissions and Codebase manifest attributes see http://docs.oracle.com/javase/7/docs/technotes/guides/jweb/no_redeploy.html

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -370,6 +370,8 @@
       <include name="**" />
         <manifest>
           <attribute name="Trusted-Library" value="true" />
+          <attribute name="Permissions" value="all-permissions" />
+          <attribute name="Codebase" value="*" />
         </manifest>
     </jar>
     <signjar keystore="${keystore.path}" storepass="${keystore.password}" alias="${keystore.alias}"
