Bugfix : move seamless_window_manager.js into the framework

--- a/client/web/web/media/script/uovd/provider/rdp/html5/Makefile.am
+++ b/client/web/web/media/script/uovd/provider/rdp/html5/Makefile.am
@@ -3,7 +3,8 @@ SUBDIRS = guacamole
 scripts_DATA = http_tunnel.js \
                seamless_handler.js \
                seamless_icon.js \
-               seamless_window_factory.js
+               seamless_window_factory.js \
+               seamless_window_manager.js
 
 scriptsdir = $(datadir)/ulteo/webclient/media/script/uovd/provider/rdp/html5
 
