--- a/client/wnos/config/apache.conf.in
+++ b/client/wnos/config/apache.conf.in
@@ -1,7 +1,7 @@
 # Ulteo Wyse ThinOS alias
 
-Alias /wnos /usr/share/ulteo/wnos
-<Directory /usr/share/ulteo/wnos>
+Alias /wnos @DATADIR@/ulteo/wnos
+<Directory @DATADIR@/ulteo/wnos>
     Options FollowSymLinks
     AllowOverride None
     Order allow,deny
