Bugfix : packaging update

--- a/client/web/web/media/script/uovd/provider/rdp/html5/guacamole/Makefile.am
+++ b/client/web/web/media/script/uovd/provider/rdp/html5/guacamole/Makefile.am
@@ -1,9 +1,12 @@
 scripts_DATA = encodings.js \
+               exttunnel.js \
                guacamole.js \
                keyboard.js \
                layer.js \
                mouse.js \
+               nkeyboard.js \
                oskeyboard.js \
+               tmouse.js \
                tunnel.js
 
 scriptsdir = $(datadir)/ulteo/webclient/media/script/uovd/provider/rdp/html5/guacamole
