Feature : top-down menu

--- a/client/web/web/media/script/webclient/Makefile.am
+++ b/client/web/web/media/script/webclient/Makefile.am
@@ -1,6 +1,7 @@
 scripts_DATA = ajaxplorer.js \
                application_counter.js  \
                desktop_container.js  \
+               menu_container.js  \
                external.js  \
                logger.js  \
                news.js  \
