--- a/ApplicationServer/linux/rufs/conf/FSBackend.conf
+++ b/ApplicationServer/linux/rufs/conf/FSBackend.conf
@@ -2,6 +2,7 @@
 # list of path involved in the union
 # separator must be ','.
 # each value imply a dedicated section
+umask = 007
 union = real
 
 # specify the location of the file which contain pid of the rufs driver
