Improvement: add a option to restrict the permission user view

--- a/ApplicationServer/linux/rufs/conf/default.conf
+++ b/ApplicationServer/linux/rufs/conf/default.conf
@@ -4,6 +4,10 @@
 # each value imply a dedicated section
 union = configuration, data, volatile
 
+# mask applied to permissions returned
+# on the fly by stat function
+permissionMask = 0700
+
 # authorize the mount on no empty directory.
 # the can be mountbind
 bind = false
