Bugfix: CSIDL_PROGRAMS(C:\Documents and Settings\username\Start Menu\Programs) is too specific, we now use CSIDL_STARTMENU (C:\Documents and Settings\username\Start Menu)

--- a/ApplicationServer/windows/VFS/conf/default.conf
+++ b/ApplicationServer/windows/VFS/conf/default.conf
@@ -27,7 +27,7 @@ volatile = "${TEMP}\.*"
 volatile = "${USERPROFILE}"
 volatile = "%{CSIDL_APPDATA}\ulteo\.*"
 volatile = "${USERPROFILE}\WINDOWS\.*"
-volatile = "%{CSIDL_PROGRAMS}.*"
+volatile = "%{CSIDL_STARTMENU}\.*"
 volatile = "%{CSIDL_INTERNET_CACHE}.*"
 configuration = "%{CSIDL_TEMPLATES}.*"
 volatile = "%{CSIDL_DESKTOP}\.*lnk"
