--- a/ApplicationServer/linux/rufs/src/CMakeLists.txt
+++ b/ApplicationServer/linux/rufs/src/CMakeLists.txt
@@ -1,8 +1,10 @@
-file(GLOB_RECURSE SRC_FILE "*.c")
+file(GLOB SRC_FILE "*.c")
+
+add_subdirectory (common)
 
 add_executable (${PROJECT_NAME} ${SRC_FILE})
 
-target_link_libraries(${PROJECT_NAME} fuse ulockmgr pam m)
+target_link_libraries(${PROJECT_NAME} common fuse ulockmgr pam m)
 
 install(TARGETS ${PROJECT_NAME} DESTINATION ${BIN_PATH})
 
