Session Manager API change: admin delegation policies are now standard settings. Overridden values are stored in the database. Users group's view is part of users groups settings

--- a/AdminConsole/classes/Makefile.am
+++ b/AdminConsole/classes/Makefile.am
@@ -2,6 +2,7 @@ scripts_DATA = AbstractObject.class.php  \
                Application.class.php \
                ApplicationsGroup.class.php \
                ConfigElement.class.php \
+               ConfigElement_boolean.class.php \
                ConfigElement_dictionary.class.php \
                ConfigElement_input.class.php \
                ConfigElement_inputlist.class.php \
