Bugfix #690: FileServer failed to stop if fs mount point is umount after the first trial

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -1,5 +1,9 @@
 [main]
 session_manager = @SESSION_MANAGER@
+# stop_timeout define the time in second granted to the service to stop
+# for infinit, use 0
+# default is 600 (10 minutes)
+# stop_timeout = 20
 roles = 
 
 # server_allow_reuse_address = true|false
