--- a/client/web/web/media/script/uovd/provider/rdp/html5/Makefile.am
+++ b/client/web/web/media/script/uovd/provider/rdp/html5/Makefile.am
@@ -3,6 +3,7 @@ SUBDIRS = guacamole
 scripts_DATA = input_keyboard.js \
                input_mouse.js \
                clipboard_handler.js \
+               print_handler.js \
                seamless_handler.js \
                seamless_icon.js \
                seamless_window_factory.js \
