--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -10,7 +10,7 @@
  Author David LECHEVALIER <david@ulteo.com> 2010, 2013
  Author Guillaume DUPAS <guillaume@ulteo.com> 2010
  Author Yann HODIQUE <y.hodique@ulteo.com> 2012
- Author David PHAM-VAN <d.pham-van@ulteo.com> 2012
+ Author David PHAM-VAN <d.pham-van@ulteo.com> 2012, 2013
 
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
@@ -369,9 +369,11 @@
     <jar destfile="jars/ulteo-applet.jar" basedir="build">
       <include name="**" />
         <manifest>
-          <attribute name="Trusted-Library" value="true" />
           <attribute name="Permissions" value="all-permissions" />
           <attribute name="Codebase" value="*" />
+          <attribute name="Caller-Allowable-Codebase" value="*" />
+          <attribute name="Application-Library-Allowable-Codebase" value="*" />
+          <attribute name="Application-Name" value="Ulteo OVD" />
         </manifest>
     </jar>
     <signjar keystore="${keystore.path}" storepass="${keystore.password}" alias="${keystore.alias}"
