--- a/client/web/web/media/script/uovd/provider/webapps/Makefile.am
+++ b/client/web/web/media/script/uovd/provider/webapps/Makefile.am
@@ -1,4 +1,5 @@
 scripts_DATA = base.js \
+               proxy.js \
                jsonp.js
 
 scriptsdir = $(datadir)/ulteo/webclient/media/script/uovd/provider/webapps
