Bugfix previous commit (must manually include Windows platform dir because cannot be detected du to dynamic imports)

--- a/ApplicationServer/OvdShells/setup.py.in
+++ b/ApplicationServer/OvdShells/setup.py.in
@@ -46,6 +46,10 @@ elif sys.platform == "win32":
     import py2exe
     sys.argv.append("py2exe")
 
+    # Force the include of ApS because of dynamic imports
+    sys.argv.append("-p")
+    sys.argv.append("ovd_shells.Platform.Windows")
+
     try:
         import modulefinder
         import win32com,sys
