--- a/ApplicationServer/desktop/config/Makefile.am
+++ b/ApplicationServer/desktop/config/Makefile.am
@@ -16,7 +16,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-SUBDIRS = plymouth thunar xfce4
+SUBDIRS = autostart plymouth thunar xfce44 xfce46
 
 conf_DATA = restricted-menu.cfg
 confdir = $(sysconfdir)
