--- a/packaging/debian/ovd-desktop/precise/rules
+++ b/packaging/debian/ovd-desktop/precise/rules
@@ -8,5 +8,5 @@ DEB_DH_INSTALL_SOURCEDIR = debian/tmp
 DEB_CONFIGURE_LIBEXECDIR = /usr/lib
 
 # hack to remove /etc/xdg/ulteo/xinitrc to the conffiles
-binary-predeb/ulteo-ovd-desktop-settings::
-	sed -i '/\/etc\/xdg\/ulteo\/xinitrc/d' debian/ulteo-ovd-desktop-settings/DEBIAN/conffiles
+#binary-predeb/ulteo-ovd-desktop::
+#	sed -i '/\/etc\/xdg\/ulteo\/xinitrc/d' debian/ulteo-ovd-desktop-settings/DEBIAN/conffiles
