BugFix: Restriced menu problem with env

--- a/ApplicationServer/desktop/restricted-menu/Makefile.am
+++ b/ApplicationServer/desktop/restricted-menu/Makefile.am
@@ -14,7 +14,7 @@ plugin_PROGRAMS =							\
 	xfce4-restricted-menu-plugin
 
 plugindir =								\
-	$(libexecdir)/xfce4/panel-plugins
+	$(libdir)/xfce4/panel-plugins
 
 xfce4_restricted_menu_plugin_SOURCES =						\
 	main.c \
@@ -42,7 +42,7 @@ desktop_in_in_files =							\
 desktop_in_files =							\
 	$(desktop_in_in_files:.desktop.in.in=.desktop.in)
 %.desktop.in: %.desktop.in.in
-	sed -e "s,\@libexecdir\@,$(libexecdir),g" < $< > $@
+	sed -e "s,\@libexecdir\@,$(libdir),g" < $< > $@
 desktop_DATA =								\
 	$(desktop_in_files:.desktop.in=.desktop)
 
