Allow to change fuse group name to match distribution specific

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -41,6 +41,10 @@ level = error warn info debug
 # default is /dev/null (no skel)
 # another wanted behavior can be /etc/skel
 #
+# linux_fuse_group = 
+# use this group name to give user's fuse permissions on the system
+# default is fuse
+#
 # override_password_method = [unix|custom]
 # unix: use passwd -r files
 # custom: usefull when using local account method with LDAP users and SSO
