Feature : add a taskbar for HTML5 iconified windows

--- a/client/web/web/media/script/webclient/Makefile.am
+++ b/client/web/web/media/script/webclient/Makefile.am
@@ -7,6 +7,7 @@ scripts_DATA = ajaxplorer.js \
                news.js  \
                progress_bar.js \
                seamless_launcher.js  \
+               seamless_taskbar.js  \
                start_app.js  \
                timezones.js  \
                ui.js  \
