Feature : add Guacamole support in SSL Gateway (Chunked streaming/Full buffering/Token support)

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -81,6 +81,11 @@ level = error warn info debug
 # the ssl server accept ssl v2 & v3 protocols by default. if this option is set to true, it will only accept sslv3
 # default value is 'false'
 
+# force_buffering = /ovd/client/start
+#                   /ovd/client/start.php
+# Force full buffering by the gateway before sending resource to the client
+# default value : /ovd/client/start /ovd/client/start.php
+
 
 [FileServer]
 # user = 
