--- a/ApplicationServer/desktop/config/Makefile.am
+++ b/ApplicationServer/desktop/config/Makefile.am
@@ -1,6 +1,7 @@
-# Copyright (C) 2010 Ulteo SAS
+# Copyright (C) 2010-2013 Ulteo SAS
 # http://www.ulteo.com
 # Author Samuel BOVEE <samuel@ulteo.com> 2010
+# Author David PHAM-VAN <d.pham-van@ulteo.com> 2013
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -21,4 +22,7 @@ SUBDIRS = autostart plymouth thunar xfce44 xfce46
 conf_DATA = restricted-menu.cfg
 confdir = $(sysconfdir)
 
-EXTRA_DIST = $(conf_DATA)
+apparmor_DATA = ulteo-ovd-kiosk
+apparmordir = $(sysconfdir)/apparmor.d/
+
+EXTRA_DIST = $(conf_DATA) $(apparmor_DATA)
